--- a/style.css
+++ b/style.css
@@ -80,8 +80,9 @@ body {
 }
 
 .image-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   gap: 20px;
   margin-bottom: 30px;
 }
@@ -89,53 +90,44 @@ body {
   background: #1a1a1a;
   border: 3px solid #18bfc6;
   border-radius: 12px;
-  padding: 60px 20px;
-  text-align: center;
+  padding: 0;
   height: 200px;
   width: 400px;
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 .image-box2 {
   background: #1a1a1a;
   border: 3px solid #18bfc6;
   border-radius: 12px;
-  padding: 60px 20px;
-  text-align: top center;
-  justify-content: center;
-  align-items: center;
+  padding: 0;
   height: 200px;
   width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 .image-box3 {
   background: #1a1a1a;
   border: 3px solid #18bfc6;
   border-radius: 12px;
-  padding: 60px 20px;
-  text-align: center;
+  padding: 0;
   height: 200px;
   width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
-.info-boxes {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-.info-card {
+.info-box {
   background: #1a1a1a;
   border: 3px solid #18bfc6;
   border-radius: 12px;
-  padding: 25px;
+  padding: 20px;
   color:white;
-}
-.info-card2 {
-  color: #18bfc6;
   font-size: 20px;
-  margin-bottom: 12px;
-  color: white;
 }
-.info-card p {
-  font-size: 14px;
-  line-height: 1.6;
-}
-
-
