--- a/style.css
+++ b/style.css
@@ -123,6 +123,54 @@ body {
   overflow: hidden;
 }
 
+.Text-grid {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.Text-box {
+  background: #1a1a1a;
+  border: 3px solid #18bfc6;
+  border-radius: 12px;
+  padding: 0;
+  height: 150px;
+  width: 400px;
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white
+}
+.Text-box2 {
+  background: #1a1a1a;
+  border: 3px solid #18bfc6;
+  border-radius: 12px;
+  padding: 0;
+  height: 150px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white
+}
+.Text-box3 {
+  background: #1a1a1a;
+  border: 3px solid #18bfc6;
+  border-radius: 12px;
+  padding: 0;
+  height: 150px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+}
+
 .info-box {
   background: #1a1a1a;
   border: 3px solid #18bfc6;
