--- a/pdf/style.css
+++ b/pdf/style.css
@@ -1,14 +1,16 @@
+/*Seite 1 Anfang*/
 .text-main {
     font-family: 'Arial', sans-serif;
     color: #333333;
     margin-top: 20px;
     margin-left: 20px;
     padding: 40px;
-}   
+}
 
 .text-main p {
     line-height: 0;
 }
+
 .text-main h1 {
     font-size: 32px;
     margin-bottom: 20px;
@@ -22,6 +24,7 @@
     font-size: 28px;
     margin-bottom: 15px;
 }
+
 .Ueberschrift1 p {
     font-size: 18px;
     margin-bottom: 10px;
@@ -39,3 +42,73 @@
     max-width: 400px;
     height: auto;
 }
+
+/*Seite 1 Ende*/
+
+/*Seite 2 Anfang*/
+.text-secondary {
+    font-family: 'Arial', sans-serif;
+    color: #333333;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 40px;
+}
+
+.text-secondary img {
+    max-width: 825px;
+    height: auto;
+    margin-top: 30px;
+}
+
+.text-secondary h1 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.text-secondary p {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.text-2 {
+    font-family: 'Arial', sans-serif;
+    color: #333333;
+    line-height: 0;
+}
+/*Seite 2 Ende*/
+
+/*Seite 3 Anfang*/
+.text-third {
+    font-family: 'Arial', sans-serif;
+    color: #333333;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 40px;
+}
+
+.text-third h1 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.text-third p {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.Bild-grid-3 {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.Bild-grid-3 img {
+    max-width: 400px;
+    height: auto;
+}
+.text-3 {
+    font-family: 'Arial', sans-serif;
+    color: #333333;
+    line-height: 0;
+}
+
+/*Seite 3 Ende*/
