--- a/pdf/style.css
+++ b/pdf/style.css
@@ -1,114 +1,262 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 /*Seite 1 Anfang*/
 .text-main {
-    font-family: 'Arial', sans-serif;
-    color: #333333;
-    margin-top: 20px;
-    margin-left: 20px;
-    padding: 40px;
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 40px;
 }
 
 .text-main p {
-    line-height: 0;
+  line-height: 0;
 }
 
 .text-main h1 {
-    font-size: 32px;
-    margin-bottom: 20px;
+  font-size: 32px;
+  margin-bottom: 20px;
 }
 
 .Ueberschrift1 {
-    padding-left: 55px;
+  padding-left: 55px;
 }
 
 .Ueberschrift1 h1 {
-    font-size: 28px;
-    margin-bottom: 15px;
+  font-size: 28px;
+  margin-bottom: 15px;
 }
 
 .Ueberschrift1 p {
-    font-size: 18px;
-    margin-bottom: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .Bild-grid {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .Bild-grid img {
-    max-width: 400px;
-    height: auto;
+  max-width: 400px;
+  height: auto;
 }
 
 /*Seite 1 Ende*/
 
 /*Seite 2 Anfang*/
 .text-secondary {
-    font-family: 'Arial', sans-serif;
-    color: #333333;
-    margin-top: 20px;
-    margin-left: 20px;
-    padding: 40px;
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 40px;
 }
 
 .text-secondary img {
-    max-width: 825px;
-    height: auto;
-    margin-top: 30px;
+  max-width: 825px;
+  height: auto;
+  margin-top: 30px;
 }
 
 .text-secondary h1 {
-    font-size: 28px;
-    margin-bottom: 20px;
+  font-size: 28px;
+  margin-bottom: 20px;
 }
 
 .text-secondary p {
-    font-size: 18px;
-    margin-bottom: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 .text-2 {
-    font-family: 'Arial', sans-serif;
-    color: #333333;
-    line-height: 0;
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  line-height: 0;
 }
 /*Seite 2 Ende*/
 
 /*Seite 3 Anfang*/
 .text-third {
-    font-family: 'Arial', sans-serif;
-    color: #333333;
-    margin-top: 20px;
-    margin-left: 20px;
-    padding: 40px;
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 40px;
 }
 
 .text-third h1 {
-    font-size: 28px;
-    margin-bottom: 20px;
+  font-size: 28px;
+  margin-bottom: 20px;
 }
 
 .text-third p {
-    font-size: 18px;
-    margin-bottom: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 .Bild-grid-3 {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .Bild-grid-3 img {
-    max-width: 400px;
-    height: auto;
+  max-width: 400px;
+  height: auto;
 }
 .text-3 {
-    font-family: 'Arial', sans-serif;
-    color: #333333;
-    line-height: 0;
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  line-height: 0;
 }
 
 /*Seite 3 Ende*/
+/*Seite 4*/
+.text-fourth {
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  margin-top: 20px;
+  margin-left: -180px;
+  padding: 40px;
+}
+
+.Bild-grid-4 {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.Bild-grid-4 img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+.unten {
+  display: flex;
+  gap: 30px;
+  align-items: flex-start;
+}
+
+.unten-links {
+  max-width: 400px;
+}
+
+.unten-links img {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.text-unten {
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  font-size: 11px;
+}
+
+.unten-rechts {
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  font-size: 12px;
+}
+
+/*Seite 4 Ende*/
+/*Seite 5*/
+.text-fifth {
+  font-family: "Arial", sans-serif;
+  color: #333333;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 40px;
+}
+
+.text-fifth p {
+  line-height: 0;
+}
+
+.text-fifth h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.Ueberschrift5 {
+  padding-left: 55px;
+}
+
+.Ueberschrift5 h1 {
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+
+.Ueberschrift5 p {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.Bild-grid-5 {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.Bild-grid-5 img {
+  max-width: 400px;
+  height: auto;
+}
+
+.Ueberschrift5 th {
+  display: flex;
+  flex-direction: column;
+  line-height: 15px;
+}
+
+.tueren {
+  font-family: Arial, sans-serif;
+  color: #000;
+  font-size: 12px;
+}
+
+.tuer {
+  display: flex;
+  margin-bottom: 4px;
+}
+
+.tuer-links {
+  width: 40px;
+}
+
+.tuer-rechts {
+  margin-left: 10px;
+}
+
+.Bild-grid-5 {
+  display: flex;
+  align-items: flex-start;
+  font-family: Arial, sans-serif;
+  color: #000;
+  font-size: 12px;
+}
+
+.Bild-grid-5 img {
+  max-width: 380px;
+  height: auto;
+  display: block;
+}
+
+.Text-rechts5 {
+  flex-direction: row-reverse;
+  margin-left: 40px;
+  line-height: 1.3;
+  margin-top: 325 px;
+}
+
+/*Seite 5 Ende*/
