--- a/PDFBilder/pdf/style.css
+++ b/PDFBilder/pdf/style.css
@@ -252,11 +252,18 @@ body {
   display: block;
 }
 
-.Text-rechts5 {
-  flex-direction: row-reverse;
+.text-rechts5 {
   margin-left: 40px;
   line-height: 1.3;
-  margin-top: 325 px;
+  margin-top: 325px;  
 }
 
 /*Seite 5 Ende*/
+/*Seite 6*/
+.text-sixth {
+  font-family: Arial, sans-serif;
+  color: #000;
+  font-size: 15px;
+}
+
+/*Seite 6 Ende*/
