--- a/PDFBilder/pdf/style.css
+++ b/PDFBilder/pdf/style.css
@@ -175,6 +175,7 @@ body {
   margin-top: 20px;
   margin-left: 20px;
   padding: 40px;
+  font-size: 20px;
 }
 
 .text-fifth p {
@@ -232,10 +233,13 @@ body {
 
 .tuer-links {
   width: 40px;
+  font-size: 19px;
 }
 
 .tuer-rechts {
-  margin-left: 10px;
+
+  margin-left: 100px;
+  font-size: 19px;
 }
 
 .Bild-grid-5 {
@@ -263,7 +267,97 @@ body {
 .text-sixth {
   font-family: Arial, sans-serif;
   color: #000;
-  font-size: 15px;
+  font-size: 20px;
+}
+.text-rechts6 {
+  margin-left: 40px;
+  line-height: 1.3;
+  margin-top: 325px;  
+  font-size: 17px;
+}
+.Bild-grid-6 {
+  display: flex;
+  align-items: flex-start;
+  font-family: Arial, sans-serif;
+  color: #000;
+  font-size: 20px;
+}
+.Bild-grid-6 img {
+  max-width: auto;
+  height: 800px;
+  display: block;
+}
+.text-unten6 {
+  margin-left: 40px;
+  line-height: 1.3;
+  font-size: 19px;
+}
+.text-unten6-2 {
+  margin-left: 40px;
+  line-height: 1.3;
+  font-size: 19px;
+}
+/*Seite 6 Ende*/
+/*Seite 7*/
+.text-seventh {
+  font-family: Arial, sans-serif;
+  color: #000;
+  font-size: 20px;
+}
+.Bild-grid-7 img{
+  width: 800px;
+  height: auto;
+  margin-left: 110px;
+  margin-top: 250px;
+}
+.text-7{
+  font-family: Arial, sans-serif;
+  color: #000;
+  font-size: 19px;
+  margin-left: 110px;
+  margin-top: 150px;
+}
+/*Seite 7 Ende
+Seite 8*/
+.text-eight{
+  font-family: Arial, sans-serif;
+  color: #000;
+  font-size: 20px;
+}
+.tuer-eins {
+  margin: 0;
+  line-height: 1.4;
+  font-size: 20px;
+  font-family: arial,sans-serif;
 }
 
-/*Seite 6 Ende*/
+.Bild-grid-8 {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.Bild-grid-8 img{
+  width: 500px;
+  height: auto;
+}
+.text-unten-8{
+  margin: 0;
+  line-height: 1.4;
+  font-size: 20px;
+  font-family: arial,sans-serif;
+}
+/*Seite 9*/
+
+.Bild-grid-9 img{
+  width: 500px;
+  height: auto;
+}
+.text-9 {
+  margin: 0;
+  line-height: 1.4;
+  font-size: 20px;
+  font-family: arial,sans-serif;
+}
+/*Seite 9 Ende*/
